{
    "name": "MagnetInputs",
    "maps": [
        {
            "name": "Player",
            "id": "8963c00d-6554-414b-a1ba-4a584929b52d",
            "actions": [
                {
                    "name": "ShootBlue",
                    "type": "Button",
                    "id": "3c4adac1-8857-428e-9120-8c4adc38dba1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootRed",
                    "type": "Button",
                    "id": "23ed0d16-abfb-48d2-8e8d-3a05dd456ec9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8560ce3a-4a70-4358-aece-2962b573da2d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootBlue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed8f57c7-f231-4c6a-8d53-b8842d8e7312",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShootRed",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}